@startuml
'https://plantuml.com/sequence-diagram
skinparam classAttributeIconSize 0

abstract class Area {
    + {abstract} createBuilding(areas : Area...)
    + {abstract} findAreaById(id : String) : Area
    + {abstract} createBuilding(partition : Partition)
    + {abstract} getDoorsGivingAccess() : ArrayList<Door>
}

class Space {
    - id : String
    + createBuilding
}

class Partition {
    - id : String

}

class DirectoryAreas {
    + {static} makeAreas()
    + {static} tellDoorsWhichSpacesTheyConnect()
    + {static} initializeDoors() : ArrayList<Door>
    + {static} findAreaById(id : String) : Area
    + {static} findDoorById(id : String) : Door
    + {static} getAllDoors() : ArrayList<Door>
}

class Door {
    - id : String
    - closed : boolean
    + Door(id : String)
    + getFromSpace() : Area
    + getToSpace() : Area
    + getState() : DoorState
    + processRequest(request : RequestReader)
    + setState(doorState : DoorState)
    + toJson() : JSONObject
    + toString() : String
    + isClosed() : boolean
    + setClosed(b : boolean)
    + getStateName() : String
    - doAction(action : String)
}


Area "1" <-- DirectoryAreas : "rootArea"
Area <|-- Partition
Area <|-- Space
Area <|-- Door
Partition *--> "1" Area : "children"
Door  <---  Space : doors
Door  <---  DirectoryAreas : allDoors

@enduml